<resources>
    <string name="app_name">euroSTEP</string>
    <string name="app_title">Europrofiligroup s.p.a.</string>
    <string name="action_settings">Settings</string>
    <string name="btn_barcode">Codice a barre</string>
    <string name="btn_send">Invia</string>
    <string name="numero">Numero Ordine</string>
    <string name="lotto">Lotto ordine</string>
    <string name="inizioLavoro">Inizio lavorazione</string>
    <string name="fineLavoro">Fine lavorazione</string>
    <string name="scelta_lavorazione">Seleziona la lavorazione</string>

    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">Connessione</string>
    <string name="pref_header_utente">Operatore</string>
    <string name="pref_header_update">Aggiornamento</string>


    <string name="pref_title_display_name">IP server</string>
    <string name="pref_title_webserver_name">IP www</string>
    <string name="pref_title_port_name">Listen port</string>
    <string name="pref_title_operator_name">Codice Operatore (cartellino)</string>
    <string name="pref_title_auto_invia">Invio dati automatico</string>
    <string name="pref_default_server_ip">192.168.29.5</string>
    <string name="pref_default_webserver_ip">192.168.29.100</string>
    <string name="pref_default_port">8888</string>
    <string name="pref_default_operator">O0020</string>
    <string name="pref_auto_invia">Regista il codice a barre in automatico</string>

    <string name="inizio_taglio">Taglio</string>
    <string name="inizio_puntatura">Puntatura</string>
    <string name="inizio_saldatura">Saldatura</string>
    <string name="inizio_fresatura">Fresatura</string>
    <string name="inizio_levigatura">Levigatura</string>
    <string name="inizio_zoccoli">Zoccoli</string>
    <string name="inizio_Lev_finale">Lev. Finale</string>
    <string name="inizio_cnc">Lavorazione CNC</string>
    <string name="inizio_pulizia">Pulizia</string>
    <string name="inizio_Mont_guarnizioni">Montaggio</string>
    <string name="inizio_Imballo">Imballo</string>

    <string name="fine_taglio">Fine Taglio</string>
    <string name="fine_puntatura">Fine Puntatura</string>
    <string name="fine_saldatura">Fine Saldatura</string>
    <string name="fine_fresatura">Fine Fresatura</string>
    <string name="fine_levigatura">Fine Levigatura</string>
    <string name="fine_zoccoli">Fine Zoccoli</string>
    <string name="fine_Lev_finale">Fine Levigatura</string>
    <string name="fine_cnc">Fine CNC</string>
    <string name="fine_pulizia">Fine Pulizia</string>


    <string name="title_activity_main">MainActivity</string>
    <string name="btn_lagnoalluminio">Lavorazioni</string>
    <string name="btn_persiane">Persiane</string>
    <string name="btn_CentriLavoro">Centri di lavoro</string>

    <string name="btn_verniciatura">Verniciatura</string>
    <string name="btn_imballo">Imballo</string>
    <string name="btn_lavori_fatti">Dati inviati</string>
    <string name="btn_problema">SEGNALA PROBLEMA</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="use_volley">Invio tramite web</string>
    <string name="btn_Cianfrinatura">Cianfrinatura</string>
    <string name="search_title">cerca</string>
    <string name="search_hint">Cerca Ordine_lotto</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_my_settings">Settings</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
