<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fab_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="com.marconatalini.eurostep.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/main.appbar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:fitsSystemWindows="true">

        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="100dp">

        <Button
            android:id="@+id/btn_LA"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/btn_lagnoalluminio"
            android:visibility="visible" />

        <Button
            android:id="@+id/btn_CentriLavoro"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/btn_CentriLavoro"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_Cianfrinatura"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/btn_Cianfrinatura"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_verniciatura"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/btn_verniciatura"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_liste"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:enabled="false"
            android:text="Liste ordini"
            android:visibility="visible" />

        <Button
            android:id="@+id/btn_problema"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/btn_problema"
            android:visibility="visible" />

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="20dp"
        android:src="@drawable/ic_action_login"
        app:backgroundTint="@color/rosso_logo" />

</android.support.design.widget.CoordinatorLayout>